Adding composants and refactoring the organisation of files. first graph 50%

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,9 @@
     "jquery": "~2.1.1",
     "modernizr": "~2.8.1",
     "d3": "~3.5.5",
-    "vue": "~0.11.5"
+    "vue": "~0.11.5",
+    "mdi": "~1.0.8-beta",
+    "materialize": "~0.96.1",
+    "underscore": "~1.8.3"
   }
 }
